--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <form action="" method="post" id="myForm">
         <input type="text" id="myInput">
-        <button type="button" id="myBtn">Get Weather</button>
+        <button type="button" id="myBtn">Montre moi !</button>
     </form>
 
     <p id="meteo"></p>
